# Editor-De-Texto-

./: README.md
Ejecutable/Editor De Texto/: Primera_ventana - Acceso directo.lnk
Primera_ventana/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
